examples/errors/defined.spl
var aap = 137;

foo(aap) {return aap;}

main() {return;}